--- a/Trilha OmniStack/mobile/package.json
+++ b/Trilha OmniStack/mobile/package.json
@@ -16,6 +16,7 @@
     "expo": "~39.0.2",
     "expo-cli": "^3.28.0",
     "expo-font": "~8.3.0",
+    "expo-image-picker": "~9.1.0",
     "expo-status-bar": "~1.0.2",
     "react": "16.13.1",
     "react-dom": "16.13.1",
